--- a/views/admin/pages/products/index.pug
+++ b/views/admin/pages/products/index.pug
@@ -31,6 +31,7 @@ block main
                             th  Hình ảnh
                             th Tiêu đề
                             th Giá
+                            th Vị trí sản phẩm
                             th Trạng thái   
                             th Hành động
                     tbody
@@ -51,6 +52,14 @@ block main
                                     )
                                 td #{item.title}
                                 td #{item.price }$
+                                td 
+                                    input(
+                                        type="number"
+                                        value=item.position
+                                        style="width: 40 px"
+                                        min= "1"
+                                        name="position"
+                                        )
                                 td
                                     if(item.status === "active")
                                         a(href="javascript:;"
