register and login user

--- a/views/client/partials/header.pug
+++ b/views/client/partials/header.pug
@@ -13,3 +13,8 @@ header.header
                             a(href="/") Trang chủ
                         li
                             a(href="/products") Sản phẩm
+                       
+                        li
+                            a(href="/user/register") Đăng ký
+                        li
+                            a(href="/user/login") Đăng nhập
