--- a/public/css/style.css
+++ b/public/css/style.css
@@ -500,3 +500,41 @@
     margin-bottom: 3px;
   }
   /* End box-room */
+
+
+ /* alert-message */
+ [show-alert] {
+  position: fixed;
+  top: 70px;
+  right: 15px;
+  z-index: 9999;
+}
+
+[show-alert].alert-hidden {
+  animation-name: alert-hidden;
+  animation-duration: 2s;
+  animation-fill-mode: both;
+}
+
+@keyframes alert-hidden {
+  from {
+      right: 15px;
+  }
+  to {
+      right: -100%;
+      display: none;
+  }
+}
+
+[show-alert] [close-alert] {
+  background: #ffffffc4;
+  display: inline-block;
+  width: 24px;
+  height: 24px;
+  line-height: 24px;
+  text-align: center;
+  font-weight: 600;
+  border-radius: 50%;
+  cursor: pointer;
+}
+/* End alert-message */
