--- a/views/client/pages/home/index.pug
+++ b/views/client/pages/home/index.pug
@@ -1,3 +1,16 @@
 extends ../../layouts/default.pug
+include ../../mixins/box-head.pug
+include ../../mixins/product-layout.pug
+
+
 block main
     h1 Trang chủ
+        .section-products-featured.my-5
+            .container.my-3
+                .row
+                    .col-12
+                        +box-head("Sản phẩm")
+
+                +product-grid(products)
+                
+                
