--- a/views/client/partials/header.pug
+++ b/views/client/partials/header.pug
@@ -13,8 +13,11 @@ header.header
                             a(href="/") Trang chủ
                         li
                             a(href="/products") Sản phẩm
-                       
-                        li
-                            a(href="/user/register") Đăng ký
-                        li
-                            a(href="/user/login") Đăng nhập
+                        if(user)
+                            li 
+                                a(href="/user/logout") Đăng xuất
+                        else
+                            li
+                                a(href="/user/register") Đăng ký
+                            li
+                                a(href="/user/login") Đăng nhập
