--- a/views/admin/pages/products/create.pug
+++ b/views/admin/pages/products/create.pug
@@ -1,6 +1,9 @@
 extends ../../layouts/default.pug
+include ../../mixins/alert.pug
 
 block main
+    +alert-error(5000)
+
     h1(class="mb-4") Thêm mới sản phẩm
 
     form(
@@ -56,7 +59,8 @@ block main
                 value="0"
                 min="0"
             )
-        div(class="form-group")
+        div(class="form-group"
+            upload-image)
             label(for="thumbnail") Ảnh
             input(
                 type="file"
@@ -64,6 +68,12 @@ block main
                 id="thumbnail"
                 name="thumbnail"
                 accept="image/*"
+                upload-image-input
+            )
+            img(
+                src=""
+                upload-image-preview
+                class = "image-preview"
             )
         div(class="form-group")
             label(for="position") Vị trí
