--- a/views/admin/pages/products/edit.pug
+++ b/views/admin/pages/products/edit.pug
@@ -4,11 +4,11 @@ include ../../mixins/alert.pug
 block main
     +alert-error(5000)
 
-    h1(class="mb-4") Thêm mới sản phẩm
+    h1(class="mb-4") Chỉnh sửa sản phẩm
 
     form(
-      action=`${prefixAdmin}/products/create`
-      id= "form-create-product  "
+      action=`${prefixAdmin}/products/edit/${product.id}?_method=PATCH`
+      id= "form-edit-product  "
       method="POST"
       enctype="multipart/form-data"
     )
@@ -20,6 +20,7 @@ block main
                 id="title"
                 name="title"
                 required
+                value=product.title
             )
         div(class="form-group")
             label(for="desc") Mô tả
@@ -28,7 +29,8 @@ block main
                 id="desc"
                 name="description"
                 rows="5"
-                )
+                value=product.description
+                ) #{product.description}
         div(class="form-group")
             label(for="price") Giá
             input(
@@ -36,18 +38,18 @@ block main
                 class="form-control"
                 id="price"
                 name="price"
-                value="0"
+                value=product.price
                 min="0"
             )
         div(class="form-group")
             label(for="discount") % Giảm giá
             input(
                 type="number"
-                step="0.1"
+                step="0.01"
                 class="form-control"
                 id="discount"
                 name="discountPercentage"
-                value="0"
+                value=product.discountPercentage
                 min="0"
             )
         div(class="form-group")
@@ -57,7 +59,7 @@ block main
                 class="form-control"
                 id="stock"
                 name="stock"
-                value="0"
+                value=product.stock
                 min="0"
             )
         div(class="form-group"
@@ -71,8 +73,15 @@ block main
                 accept="image/*"
                 upload-image-input
             )
+            input(
+                type="text"
+                class="form-control-file"
+                id="thumbnailLink"
+                name="thumbnailLink"
+                upload-image-input
+            )
             img(
-                src=""
+                src=product.thumbnail
                 upload-image-preview
                 class = "image-preview"
             )
@@ -85,6 +94,7 @@ block main
                 name="position"
                 placeholder="Tự động tăng"
                 min="1"
+                value=product.position
             )
         div(class="form-group form-check form-check-inline")
             input(
@@ -93,7 +103,7 @@ block main
                 id="statusActive"
                 name="status"
                 value="active"
-                checked
+                checked=product.status == "active" ? true :false  
             )
             label(for="statusActive" class="form-check-label") Hoạt động
         div(class="form-group form-check form-check-inline")
@@ -103,10 +113,11 @@ block main
                 id="statusInActive"
                 name="status"
                 value="inactive"
+                checked=product.status == "inactive" ? true :false  
             )
             label(for="statusInActive" class="form-check-label") Dừng hoạt động
         div(class="form-group")
             button(
                 type="submit"
                 class="btn btn-primary"
-            ) Tạo mới
+            ) Cập nhật
