--- a/views/admin/pages/products/index.pug
+++ b/views/admin/pages/products/index.pug
@@ -8,6 +8,7 @@ include ../../mixins/alert.pug
 block main
     
     +alert-success(5000)
+    +alert-error(5000)
 
     h1 Danh sách sản phẩm
 
@@ -89,7 +90,10 @@ block main
                                         ) Không hoạt động
 
                                 td 
-                                    button(class="btn btn-warning btn-sm") Sửa
+                                    a(
+                                        class = "btn btn-warning btn-sm ml-1"
+                                        href=`${prefixAdmin}/products/edit/${item.id}`
+                                        )  Sửa
                                     button(
                                         class="btn btn-danger btn-sm ml-1"
                                         button-delete
