--- a/views/admin/pages/products/edit.pug
+++ b/views/admin/pages/products/edit.pug
@@ -78,7 +78,7 @@ block main
                 class="form-control-file"
                 id="thumbnailLink"
                 name="thumbnailLink"
-                upload-image-input
+                placeholder="Link ảnh"
             )
             img(
                 src=product.thumbnail
