--- a/views/admin/pages/products/index.pug
+++ b/views/admin/pages/products/index.pug
@@ -4,6 +4,8 @@ include ../../mixins/search.pug
 include ../../mixins/pagination.pug
 include ../../mixins/form-change-multi.pug
 include ../../mixins/alert.pug
+include ../../mixins/sort.pug
+
 
 block main
     
@@ -11,7 +13,12 @@ block main
     +alert-error(5000)
 
     h1 Danh sách sản phẩm
-
+    .card.mb-3
+        .card-header Sắp xếp
+        .card-body
+            .row
+                .col-4
+                    +sort()
     .card.mb-3
         .card-header Bộ lọc và tìm kiếm
         .card-body
@@ -32,6 +39,7 @@ block main
                             href=`${prefixAdmin}/products/create`
                             class = "btn btn-outline-success"
                         ) + Thêm mới
+
 
                 table(class= "table table-hover table-sm"
                       checkbox-multi
