--- a/views/admin/pages/dashboard/index.pug
+++ b/views/admin/pages/dashboard/index.pug
@@ -1,4 +1,4 @@
-extend ../../layouts/default.pug
+//- extend ../../layouts/default.pug
 
-block main 
-    h1 Trang tổng quan   
+//- block main 
+//-     h1 Trang tổng quan   
