--- a/views/admin/pages/products-category/index.pug
+++ b/views/admin/pages/products-category/index.pug
@@ -1,45 +1,17 @@
 extend ../../layouts/default.pug
-include ../../mixins/filter-status.pug
-include ../../mixins/search.pug
-include ../../mixins/pagination.pug
-include ../../mixins/form-change-multi.pug
-include ../../mixins/alert.pug
-include ../../mixins/sort.pug
-
 
 block main
-    
-    +alert-success(5000)
-    +alert-error(5000)
-
     h1 Danh sách sản phẩm
     .card.mb-3
-        .card-header Sắp xếp
-        .card-body
-            .row
-                .col-4
-                    +sort()
-    .card.mb-3
-        .card-header Bộ lọc và tìm kiếm
-        .card-body
-            .row
-                .col-6
-                    +filter-status(filterStatus)                     
-                .col-6
-                    +search(keyword)
-                            
-    .card.mb-3
-        .card-header Danh sách
+        .card-header Danh mục mục lục
             .card-body
                 .row
                     .col-8 
-                        +form-change-multi(`${prefixAdmin}/products/change-multi?_method=PATCH`)
                     .col-4
                         a(
-                            href=`${prefixAdmin}/products/create`
+                            href=`${prefixAdmin}/products-category/create`
                             class = "btn btn-outline-success"
                         ) + Thêm mới
-
 
                 table(class= "table table-hover table-sm"
                       checkbox-multi
@@ -49,14 +21,13 @@ block main
                             th
                                 input(type="checkbox" name="checkall")
                             th STT
-                            th  Hình ảnh
+                            th Hình ảnh
                             th Tiêu đề
-                            th Giá
                             th Vị trí sản phẩm
                             th Trạng thái   
                             th Hành động
                     tbody
-                        each item, index in products
+                        each item, index in records
                             tr
                                 td 
                                     input(
@@ -72,7 +43,6 @@ block main
                                         height="auto"
                                     )
                                 td #{item.title}
-                                td #{item.price }$
                                 td 
                                     input(
                                         type="number"
@@ -100,33 +70,14 @@ block main
                                 td 
                                     a(
                                         class = "btn btn-secondary btn-sm ml-1"
-                                        href=`${prefixAdmin}/products/detail/${item.id}`
+                                        href=`${prefixAdmin}/products-category/detail/${item.id}`
                                         )  Chi tiết
                                     a(
                                         class = "btn btn-warning btn-sm ml-1"
-                                        href=`${prefixAdmin}/products/edit/${item.id}`
+                                        href=`${prefixAdmin}/products-category/edit/${item.id}`
                                         )  Sửa
                                     button(
                                         class="btn btn-danger btn-sm ml-1"
                                         button-delete
                                         data-id=item.id
                                         ) Xóa
-                   
-    +pagination(pagination)
-    
-    form(
-        action=""
-        method= "POST"
-        id="form-change-status"
-        data-path = `${prefixAdmin}/products/change-status` 
-    )
-
-    form(
-        action=""
-        method= "POST"
-        id="form-delete-item"
-        data-path = `${prefixAdmin}/products/delete` 
-        )
-    script(src="/admin/js/product.js")
-
-            
