--- a/views/admin/pages/products-category/create.pug
+++ b/views/admin/pages/products-category/create.pug
@@ -1,4 +1,5 @@
 extends ../../layouts/default.pug
+include ../../mixins/select-tree.pug
 
 block main
   h1 #{pageTitle}
@@ -19,12 +20,14 @@ block main
       )
     div(class="form-group")
       label(for="parent_id") Danh mục cha
-      input(
-        type="text"
+      select(
+        name= "parent_id"
+        id= "parent_id"
         class="form-control"
-        id="parent_id"
-        name="parent_id"
       )
+        option(value="") -- Chọn danh mục cha --
+        if(records)
+          +select-tree(records)
 
     div(class="form-group")
       label(for="desc") Mô tả
