--- a/views/admin/pages/products/index.pug
+++ b/views/admin/pages/products/index.pug
@@ -49,7 +49,7 @@ block main
                             th
                                 input(type="checkbox" name="checkall")
                             th STT
-                            th  Hình ảnh
+                            th Hình ảnh
                             th Tiêu đề
                             th Giá
                             th Vị trí sản phẩm
@@ -63,7 +63,7 @@ block main
                                         type="checkbox"
                                         name="id"
                                         value=item.id)
-                                td #{index+1}
+                                td #{(pagination.currentPage-1)*pagination.limitItems + index + 1}
                                 td 
                                     img(
                                         src=item.thumbnail
