sua phan update danh muc

--- a/views/admin/pages/products-category/index.pug
+++ b/views/admin/pages/products-category/index.pug
@@ -2,7 +2,7 @@ extend ../../layouts/default.pug
 include ../../mixins/table-tree.pug
 
 block main
-    h1 Danh sách sản phẩm
+    h1 Danh mục sản phẩm
     .card.mb-3
         .card-header Danh mục mục lục
             .card-body
